--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <title ng-controller="titleCTRL">VPGum - {{page.name}}</title>
     </head>
     <body>
+        TExt
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" ng-controller="navBarCTRL">
             <div class="container-fluid">   <!-- Roztiahne navbar na celu plochu -->
                 <a class="navbar-brand" href="#"><img src="client/design/logo.png"> {{owner.name}}</a>
