--- a/index.html
+++ b/index.html
@@ -5,88 +5,25 @@
         <meta charset="UTF-8">
         <!-- AngularJS -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
         <!-- Bootstrap -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <!-- moje kontrolery -->
         <script src="client/js/VPGumAPP.js"></script>
+        <script src="client/js/top.js"></script>
+        <script src="client/js/rotate.js"></script>
         <!-- moje css -->
         <link rel="stylesheet" href="client/css/index.css">
         <!-- Titul stranky -->
         <title ng-controller="titleCTRL">VPGum - {{page.name}}</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" ng-controller="navBarCTRL">
-            <div class="container-fluid">   <!-- Roztiahne navbar na celu plochu -->
-                <a class="navbar-brand" href="#"><img src="client/design/logo.png"> {{owner.name}}</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item" ng-class="activeClass(item.current, item.submenu != null)" ng-repeat="item in menu">
-                            <a class="nav-link" href="{{item.route}}" ng-if="item.submenu == null">
-                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="{{item.iconColor}}" xmlns="http://www.w3.org/2000/svg" ng-if="item.icon != null">
-                                    <path fill-rule="evenodd" d="{{item.icon}}"/>
-                                    <path fill-rule="evenodd" d="{{item.icon2}}" ng-if="item.icon2 != null"/>
-                                </svg>
-                                {{item.text}} 
-                                <span class="sr-only" ng-if="item.current">(current)</span>
-                            </a>
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-if="item.submenu != null">
-                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="{{item.iconColor}}" xmlns="http://www.w3.org/2000/svg" ng-if="item.icon != null">
-                                    <path fill-rule="evenodd" d="{{item.icon}}"/>
-                                    <path fill-rule="evenodd" d="{{item.icon2}}" ng-if="item.icon2 != null"/>
-                                </svg>
-                                {{item.text}}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown" ng-if="item.submenu != null">
-                                <a class="dropdown-item" href="{{subitem.route}}" ng-repeat="subitem in item.submenu">
-                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="{{subitem.iconColor}}" xmlns="http://www.w3.org/2000/svg" ng-if="subitem.icon != null">
-                                        <path fill-rule="evenodd" d="{{subitem.icon}}"/>
-                                        <path fill-rule="evenodd" d="{{subitem.icon2}}" ng-if="subitem.icon2 != null"/>
-                                    </svg>
-                                    {{subitem.text}}
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav my-1 my-lg-0">
-                        <li class="nav-item" ng-class="activeClass(item.current, item.submenu != null)" ng-repeat="item in leftMenu">
-                            <a class="nav-link" href="{{item.route}}" ng-if="item.submenu == null">
-                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="{{item.iconColor}}" xmlns="http://www.w3.org/2000/svg" ng-if="item.icon != null">
-                                    <path fill-rule="evenodd" d="{{item.icon}}"/>
-                                    <path fill-rule="evenodd" d="{{item.icon2}}" ng-if="item.icon2 != null"/>
-                                </svg>
-                                {{item.text}} 
-                                <span class="sr-only" ng-if="item.current">(current)</span>
-                            </a>
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-if="item.submenu != null">
-                                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="{{item.iconColor}}" xmlns="http://www.w3.org/2000/svg" ng-if="item.icon != null">
-                                    <path fill-rule="evenodd" d="{{item.icon}}"/>
-                                    <path fill-rule="evenodd" d="{{item.icon2}}" ng-if="item.icon2 != null"/>
-                                </svg>
-                                {{item.text}}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown" ng-if="item.submenu != null">
-                                <a class="dropdown-item" href="{{subitem.route}}" ng-repeat="subitem in item.submenu">
-                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-fill" fill="{{subitem.iconColor}}" xmlns="http://www.w3.org/2000/svg" ng-if="subitem.icon != null">
-                                        <path fill-rule="evenodd" d="{{subitem.icon}}"/>
-                                        <path fill-rule="evenodd" d="{{subitem.icon2}}" ng-if="subitem.icon2 != null"/>
-                                    </svg>
-                                    {{subitem.text}}
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <!-- V pripade max zobrazenia sa trosku odsadi -->
-                <div class="col-lg-1"></div>
-            </div>
-        </nav>
+        <!-- Navigacny panel - top panel -->
+        <div id="topBar" ng-controller="navBarCTRL"></div>
+        <div id="rotateBar" class="container d-md-none d-lg-block carousel slide" data-ride="carousel" ng-controller="rotateBarCTRL"></div>
+        <!-- Obsah - meni sa podla stranky -->
         <div ng-view></div>
     </body>
 </html>
