Opat kompletna prekopavka... Vyvorenie vlastneho CSS na styl bootstrapu, tiez vytvorenie navigacneho panelu

--- a/client/myTrap/myTrap.html
+++ b/client/myTrap/myTrap.html
@@ -6,8 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="myTrap.css">
         <link rel="stylesheet" href="components.css">
+
+        <script src="https://kit.fontawesome.com/18578e73ef.js" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body class="tprim">
         <h3>Div bude menit velkosti ako sa bude prechadzat jednotlivymi rozliseniami</h3>
         <div class="container">
             <div class="row">
@@ -50,7 +52,13 @@
             <div class="container bg-red">
                 <div class="row-md column">
                     <div class="menu_left col-10 tcenter bg-blue">
-                        <h3>HOME PAGE1 PAGE2 PAGE3 PAGE4</h3>
+                        <div class="column row-md">
+                            <div class="col">HOME</div>
+                            <div class="col">PAGE1</div>
+                            <div class="col">PAGE2</div>
+                            <div class="col">PAGE3</div>
+                            <div class="col">PAGE4</div>
+                        </div>
                     </div>
                     <div class="menu_right col-2 tcenter bg-blue">
                         <h4>LOGIN</h4>
@@ -62,33 +70,33 @@
         <div class="container bg-green">
             <div class="row column-md">
                 <div class="menu_left col-10 tcenter bg-blue">
-                    <h3>HOME PAGE1 PAGE2 PAGE3 PAGE4</h3>
+                    <div class="row column-md">
+                        <div class="col">HOME</div>
+                        <div class="col">PAGE1</div>
+                        <div class="col">PAGE2</div>
+                        <div class="col">PAGE3</div>
+                        <div class="col">PAGE4</div>
+                    </div>
                 </div>
                 <div class="menu_right col-2 tcenter bg-blue">
                     <h4>LOGIN</h4>
                 </div>
             </div>
         </div>
-
-        <!--<div class="blackBack">
-            <div class="modal w-50 box-center">
-                <div class="row">
-                    <div class="col-2"></div>
-                    <h2 class="col-8">Header</h2>
-                    <div class="col-2"></div>
-                </div>
-                <div class="row">
-                    <div class="col-1"></div>
-                    <input class="col-10">
-                    <div class="col-1"></div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-3 tright"><button>Close</button></div>
-                    <div class="col-6"></div>
-                    <div class="col-3"><button>Send</button></div>
-                </div>
-            </div>
-        </div>-->
+        <div class="container">
+            <table class="w-100">
+                <tr>
+                    <th class="col-1 bg-red">h1</th>
+                    <th class="col-9 bg-green">h2</th>
+                    <th class="col-2 bg-red">h3</th>
+                </tr>
+                <tr>
+                    <td>d1</td>
+                    <td>d2</td>
+                    <td>d3</td>
+                </tr>
+            </table>
+        </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </body>
 </html>
