--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<html ng-app="VPGumAPP" lang="sk-SK">
+<html lang="sk-SK" ng-app="main">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="UTF-8">
-        <!-- AngularJS -->
+        <!-- META -->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta charset="UTF-8" />
+        <!-- JQUERY -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- ANGULAR -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
-        <!-- Bootstrap -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <!-- moje kontrolery -->
-        <script src="client/js/VPGumAPP.js"></script>
-        <script src="client/js/top.js"></script>
-        <script src="client/js/rotate.js"></script>
-        <!-- moje css -->
-        <link rel="stylesheet" href="client/css/index.css">
-        <!-- Titul stranky -->
-        <title ng-controller="titleCTRL">VPGum - {{page.name}}</title>
+        <!-- AWESOME FONT -->
+        <script src="https://kit.fontawesome.com/18578e73ef.js" crossorigin="anonymous"></script>
+        <!-- MOJE CSS -->
+        <link rel="stylesheet" href="client/css/myTrap.css" />
+        <link rel="stylesheet" href="client/css/components.css" />
+        <link rel="stylesheet" href="client/css/index.css" />
+        <!-- MOJE JS -->
+        <script type="text/javascript" src="client/js/app.js"></script>
+        <script type="text/javascript" src="client/js/topMenu.js"></script>
+        <!-- OTHER HEAD -->
+        <title ng-controller="titleCTRL">{{ title }} - {{ route }}</title>
     </head>
-    <body>
-        <!-- Navigacny panel - top panel -->
-        <div id="topBar" ng-controller="navBarCTRL"></div>
-        <div id="rotateBarHTML" class="container" ng-controller="rotateBarCTRL"></div>
-        <!-- Obsah - meni sa podla stranky -->
+    <body class="tprim" ng-controller="mainCTRL">
+        <div id="top-menubox" ng-controller="topMenuCTRL"></div>
         <div ng-view></div>
     </body>
 </html>
