Sfunkcnenie obrazovky home a tiez prihlasenia.

--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -1,1 +1,23 @@
-<h1>HOME</h1>
+<div class="container content" ng-controller="homeCTRL">
+    <div class="row" ng-if="loading">
+        <div class="col-12 tcenter">
+            <h1>Loading...</h1>
+        </div>
+    </div>
+    <!--<div class="row" ng-if="!loading">
+        <div class="col-12 tcenter">
+            <h1>Nadpis</h1>
+        </div>
+    </div>-->
+    <div class="column row-xm tjust" ng-if="!loading" ng-repeat="itm in cards track by $index">
+        <div class="col pd-10 mg-20 card" ng-repeat="item in cards[$index]">
+            <img class="w-100" ng-src="client/design/card{{ item.h_id }}.jpg" ng-if="itm.length == 3">
+            <img class="w-100 w-xm-50" ng-src="client/design/card{{ item.h_id }}.jpg" ng-if="itm.length == 2">
+            <img class="w-100 w-xm-25" ng-src="client/design/card{{ item.h_id }}.jpg" ng-if="itm.length == 1">
+            <h3><i class="{{ item.icon }} mg-10"></i> {{ item.header }}</h3>
+            <span class="line"></span>
+                {{ item.text }}
+            <span class="line"></span>
+        </div>
+    </div>
+</div>
