--- a/client/html/top.html
+++ b/client/html/top.html
@@ -25,36 +25,54 @@
                 </div>
             </div>
         </div>
-        <div class="col-xm-7 menu">
-            <div class="showinl-md" ng-repeat="item in menu">
-                <a class="{{getClass(item)}} show showbl-md w-md-0 round-none round-md-top-10" href="{{item.page}}">
-                    <i class="{{item.icon}}"></i>
-                    {{item.text}}
-                </a>
-            </div>
-        </div>
-        <div class="col-2 hide show-xs show-lg">
-            <ul class="left showbl"> <!-- pre vysoke rozlisenia a XS -->
-                <li ng-repeat="item in leftMenu">
-                    <i class="{{item.icon}}"></i>
-                    {{item.text}}
-                    <i class="fas fa-angle-down" ng-if="item.menu != null"></i>
-                    <ul ng-if="item.menu != null">
-                        <li ng-repeat="subitem in item.menu">
-                            <i class="{{item.icon}}" ng-if="subitem.icon != null"></i>
-                            {{subitem.text}}
+        <div class="col-9">
+            <div class="column row-lg menu-hide">
+                <div class="col-1 hide-md menu-button">
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div class="col-xm-7 menu">
+                    <div class="showinl-md" ng-repeat="item in menu">
+                        <a class="{{getClass(item)}} show showbl-md w-md-0 round-none round-md-top-10" href="{{item.page}}">
+                            <i class="{{item.icon}}"></i>
+                            {{item.text}}
+                        </a>
+                    </div>
+                </div>
+                <div class="col-2 hide show-xs show-lg">
+                    <ul class="left showbl"> <!-- pre vysoke rozlisenia a XS -->
+                        <li ng-repeat="item in leftMenu">
+                            <i class="{{item.icon}}"></i>
+                            {{item.text}}
+                            <i class="fas fa-angle-down" ng-if="item.menu != null"></i>
+                            <ul ng-if="item.menu != null">
+                                <li ng-repeat="subitem in item.menu">
+                                    <i class="{{item.icon}}" ng-if="subitem.icon != null"></i>
+                                    {{subitem.text}}
+                                </li>
+                            </ul>
                         </li>
                     </ul>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <div class="container-full under-top">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <img class="w-100" src="client/design/top_img.jpg">
+    <div class="row">
+        <div class="col-12">
+            <div class="row">
+                <div class="col-1 col-md-5"></div>
+                <div class="col-10 col-md-6">
+                    <div class="infobox">
+                        <div class="head">
+                            <h2>Nadpis informacie</h2>
+                        </div>
+                        <div class="body tjust">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1"></div>
             </div>
         </div>
     </div>
