Dokoncenie galeria, priprava na update

--- a/client/html/top.html
+++ b/client/html/top.html
@@ -10,7 +10,8 @@
                 </div>
                 <div class="col-4 hide show-sm hide-lg">
                     <ul class="left showbl"> <!-- pre nizke rozlisenia okrem XS -->
-                        <li ng-repeat="item in leftMenu">
+                        <li ng-if="user.acc != null">{{ user.acc.fname + ' ' + user.acc.lname }}</li>
+                        <li ng-if="user.acc == null" ng-repeat="item in leftMenu">
                             <i class="{{item.icon}}"></i>
                             {{item.text}}
                             <i class="fas fa-angle-down" ng-if="item.menu != null"></i>
@@ -40,14 +41,17 @@
                 </div>
                 <div class="col-2 hide show-xs show-lg">
                     <ul class="left showbl"> <!-- pre vysoke rozlisenia a XS -->
-                        <li ng-repeat="item in leftMenu">
+                        <li ng-if="user.acc != null">{{ user.acc.fname + ' ' + user.acc.lname }}</li>
+                        <li ng-if="user.acc == null" ng-repeat="item in leftMenu">
                             <i class="{{item.icon}}"></i>
                             {{item.text}}
                             <i class="fas fa-angle-down" ng-if="item.menu != null"></i>
                             <ul ng-if="item.menu != null">
                                 <li ng-repeat="subitem in item.menu">
-                                    <i class="{{item.icon}}" ng-if="subitem.icon != null"></i>
-                                    {{subitem.text}}
+                                    <a href="{{subitem.page}}">
+                                        <i class="{{subitem.icon}}" ng-if="subitem.icon != null"></i>
+                                        {{subitem.text}}
+                                    </a>
                                 </li>
                             </ul>
                         </li>
