--- a/client/pages/gallery.html
+++ b/client/pages/gallery.html
@@ -2,7 +2,23 @@
     <div class="column">
         <div class="row">
             <div class="col-12 tcenter page-head mg-20">
-                Zoznam produktov
+                Galeria
+            </div>
+        </div>
+        <div class="tright" ng-if="user.acc.admin == 1">
+            <i ng-if="!addImg.edit" ng-click="add()" class="far fa-plus-square tbig click add" style="margin-right: 35px;"></i>
+            <i ng-if="addImg.edit" ng-click="close()" class="fas fa-times-circle tbig click delete" style="margin-right: 35px;"></i>
+            <i ng-if="addImg.edit" ng-click="save()" class="fas fa-check tbig click edit" style="margin-right: 35px;"></i>
+        </div>
+        <div class="row" ng-if="addImg.edit">
+            <div clas="col-3">
+                <img ng-src="client/design/texts0.jpg">
+            </div>
+            <div class="column col-9">
+                <div class="row"><input class="col-12 tprim" ng-model="addImg.header" placeholder="Nadpis"></div>
+                <div class="row">
+                    <textarea class="col-12 pd-15 tjust text" ng-model="addImg.text" rows="4" placeholder="Text"></textarea>
+                </div>
             </div>
         </div>
         <div class="column tcenter">
